fixed extra padding on index footer

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,7 @@
 @media (max-width : 1100px){
   body {min-width: 768px;}
   .wrap {width: 90%;}
+  #index {margin-bottom: -5em;}
   #index article header {width: 20%; padding: 0 20px 0 0;}
   .index-post {width: 70%; right: 20px;}
   .show-all-posts {font-weight: bold; background-color: #ABD4E7; color: #FFFFFF; width: 90%; border-radius: 10px; padding: .75em 0; font-size: 1.5em;}
